--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
             .hidden {
                 display: none !important;
             }
+
+            #deviceInfo {
+                font-size: 0.8rem;
+                color: #666;
+                margin-top: 1rem;
+            }
         </style>
     </head>
     <body>
@@ -82,16 +88,56 @@
                 <p>You're viewing this page in a regular browser.</p>
                 <p>Everything looks good! 👍</p>
             </div>
+            <div id="deviceInfo"></div>
         </div>
 
         <script>
             function isLinkedInBrowser() {
                 const userAgent = navigator.userAgent.toLowerCase();
-                return userAgent.includes("linkedin");
+                return (
+                    userAgent.includes("linkedin") ||
+                    (userAgent.includes("mozilla") && userAgent.includes("linkedin")) ||
+                    document.documentElement.classList.contains("linkedin")
+                );
+            }
+
+            function isIOS() {
+                const userAgent = navigator.userAgent.toLowerCase();
+                return /iphone|ipad|ipod/.test(userAgent);
+            }
+
+            function isAndroid() {
+                const userAgent = navigator.userAgent.toLowerCase();
+                return /android/.test(userAgent);
             }
 
             function getCurrentURL() {
                 return window.location.href;
+            }
+
+            function attemptRedirect() {
+                const currentURL = getCurrentURL();
+                const encodedURL = encodeURIComponent(currentURL);
+
+                if (isIOS()) {
+                    // iOS specific handling
+                    window.location.href = currentURL.replace("https://", "https://apps.apple.com/");
+                    setTimeout(() => {
+                        window.location.href = `x-web-search://?${encodedURL}`;
+                    }, 1000);
+                    setTimeout(() => {
+                        window.location.href = currentURL;
+                    }, 2000);
+                } else if (isAndroid()) {
+                    // Android specific handling
+                    window.location.href = `intent://${window.location.host}${window.location.pathname}${window.location.search}#Intent;scheme=https;package=com.android.chrome;end`;
+                    setTimeout(() => {
+                        window.location.href = `googlechrome://navigate?url=${encodedURL}`;
+                    }, 1000);
+                    setTimeout(() => {
+                        window.location.href = currentURL;
+                    }, 2000);
+                }
             }
 
             document.addEventListener("DOMContentLoaded", function () {
@@ -99,6 +145,7 @@
                 const regularBrowser = document.getElementById("regularBrowser");
                 const browserInfo = document.getElementById("browserInfo");
                 const openInBrowserBtn = document.getElementById("openInBrowser");
+                const deviceInfo = document.getElementById("deviceInfo");
 
                 if (isLinkedInBrowser()) {
                     linkedinMessage.style.display = "block";
@@ -107,19 +154,22 @@
 
                     // Set up the button to open in default browser
                     openInBrowserBtn.href = getCurrentURL();
+                    openInBrowserBtn.addEventListener("click", function (e) {
+                        e.preventDefault();
+                        attemptRedirect();
+                    });
 
                     // Attempt automatic redirect
-                    window.location.href = "googlechrome://navigate?url=" + encodeURIComponent(getCurrentURL());
-                    setTimeout(() => {
-                        window.location.href = "firefox://open-url?url=" + encodeURIComponent(getCurrentURL());
-                    }, 1000);
-                    setTimeout(() => {
-                        window.location.href = getCurrentURL();
-                    }, 2000);
+                    attemptRedirect();
+
+                    // Show device info for debugging
+                    const deviceType = isIOS() ? "iOS" : isAndroid() ? "Android" : "Other";
+                    deviceInfo.textContent = `Device type: ${deviceType}`;
                 } else {
                     linkedinMessage.style.display = "none";
                     regularBrowser.classList.remove("hidden");
                     browserInfo.textContent = "Regular browser detected";
+                    deviceInfo.style.display = "none";
                 }
             });
         </script>
