add: version number on page

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                 <p>Everything looks good! 👍</p>
             </div>
             <div id="deviceInfo"></div>
+            <div style="font-size: 0.8rem; color: #666; margin-top: 2rem; text-align: center">v1.0.0</div>
         </div>
 
         <script>
